some layout problem from homepage navbar fixed

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -40,7 +40,7 @@ a:hover {
     align-items: end;
     animation-duration: 2.5s;
     animation-name: delayOpac1;
-   
+    position: relative;
 
     // logo styles
     @include logoStyles;
@@ -70,10 +70,13 @@ a:hover {
         background:$logo-color;
     }
 
-    &__open-buton{
-       width:50px;
-       height:50px;
-        position: relative;
+    &__open-buton {
+        position: absolute;
+        top:0;
+        right:0;
+        width:40px;
+        height:40px;
+        margin-top:1rem;
         span:nth-child(1) {
             @include toggle4ButtonMenu(#CC1414);
             position:absolute;
